@@ -9,7 +9,7 @@ jobs:
   build-nix:
     strategy:
       matrix:
-        os: [ ubuntu-20.04, ubuntu-22.04, macos-12, macos-14 ]
+        os: [ ubuntu-24.04, ubuntu-22.04, macos-12, macos-14 ]
     runs-on: ${{ matrix.os }}
 
     steps:
